--- a/index.html
+++ b/index.html
@@ -2816,6 +2816,45 @@ function CardDetailPage({ card, darkMode, ratings, userRatedCards, onRate, onBac
                 </a>
               )}
             </div>
+
+            {/* Ask AI Section - Prominent */}
+            <div className={`p-6 rounded-xl ${darkMode ? 'bg-gradient-to-br from-purple-900/40 to-blue-900/40 border border-purple-500/30' : 'bg-gradient-to-br from-purple-50 to-blue-50 border border-purple-200'}`}>
+              <div className="flex items-start gap-4">
+                <div className={`p-3 rounded-xl ${darkMode ? 'bg-purple-500/20' : 'bg-purple-100'}`}>
+                  <svg className="w-8 h-8 text-purple-400" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/>
+                  </svg>
+                </div>
+                <div className="flex-1">
+                  <h3 className={`text-lg font-bold mb-1 ${darkMode ? 'text-white' : 'text-gray-900'}`}>🤖 Ask AI About {card.name}</h3>
+                  <p className={`text-sm mb-4 ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
+                    Get instant, detailed information about this card's features, fees, rewards, and how it compares to alternatives.
+                  </p>
+                  <div className="flex flex-wrap gap-3">
+                    {aiProviders.map((provider) => (
+                      <a
+                        key={provider.id}
+                        href={provider.getUrl(`Tell me everything about ${card.name} crypto card: features, fees, cashback rewards, supported countries, pros and cons, and how it compares to competitors`)}
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        className={`flex items-center gap-2 px-4 py-2.5 rounded-xl ${provider.bgColor} ${provider.hoverBg} border ${provider.borderColor} transition-all hover:scale-105 hover:shadow-lg`}
+                      >
+                        <img
+                          src={provider.logo}
+                          alt={provider.name}
+                          className={`${provider.iconSize || 'w-5 h-5'} object-cover`}
+                          onError={(e) => { e.target.style.display='none'; }}
+                        />
+                        <span className="text-white text-sm font-medium">Ask {provider.name}</span>
+                      </a>
+                    ))}
+                  </div>
+                  <p className={`text-xs mt-3 ${darkMode ? 'text-gray-500' : 'text-gray-400'}`}>
+                    One click to get AI-written analysis. Opens in a new tab.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         )}
 
