--- a/index.html
+++ b/index.html
@@ -187,6 +187,29 @@
   <script type="text/babel">
 const { useState, createContext, useContext } = React;
 
+// ============================================
+// API CONFIG - Update with your Google Apps Script URL
+// ============================================
+const SPENDBASE_API = {
+  // Replace with your deployed Google Apps Script web app URL
+  endpoint: 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'
+};
+
+// Form submission helper
+async function submitToAPI(type, data) {
+  try {
+    const response = await fetch(SPENDBASE_API.endpoint, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ type, ...data })
+    });
+    return await response.json();
+  } catch (error) {
+    console.error('API Error:', error);
+    return { success: false, error: error.message };
+  }
+}
+
 // Theme Context for Light/Dark Mode
 const ThemeContext = createContext();
 
@@ -567,9 +590,9 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
       onMouseLeave={() => !isTouchDevice && setFlipped(false)}
       onClick={handleInteraction}
     >
-      <div style={{ position: 'relative', width: '100%', height: '100%', transformStyle: 'preserve-3d', transition: 'transform 0.6s', transform: flipped ? 'rotateY(180deg)' : 'none' }}>
+      <div style={{ position: 'relative', width: '100%', height: '100%', transformStyle: 'preserve-3d', WebkitTransformStyle: 'preserve-3d', transition: 'transform 0.6s', transform: flipped ? 'rotateY(180deg)' : 'none' }}>
         {/* FRONT */}
-        <div style={{ position: 'absolute', width: '100%', height: '252px', backfaceVisibility: 'hidden', pointerEvents: flipped ? 'none' : 'auto' }}>
+        <div style={{ position: 'absolute', width: '100%', height: '252px', backfaceVisibility: 'hidden', WebkitBackfaceVisibility: 'hidden', pointerEvents: flipped ? 'none' : 'auto' }}>
           <div className={`h-full rounded-2xl p-4 text-white shadow-xl relative overflow-hidden flex flex-col ${card.bg === 'holographic' || card.bg === 'solayer-gradient' || card.bg === 'kosh-gradient' || card.bg === 'bleap-gradient' || card.bg === 'redotpay-gradient' ? '' : 'bg-gradient-to-br ' + card.bg}`} style={card.bg === 'holographic' ? { background: 'linear-gradient(135deg, #a8edea 0%, #fed6e3 25%, #d299c2 50%, #a8c0ff 75%, #c2ffd8 100%)' } : card.bg === 'solayer-gradient' ? { background: 'linear-gradient(160deg, #1a5c4c 0%, #134539 30%, #0d3330 60%, #0a2725 100%)' } : card.bg === 'kosh-gradient' ? { background: 'linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 25%, #1a1a1a 50%, #2d2d2d 75%, #1a1a1a 100%)' } : card.bg === 'bleap-gradient' ? { background: 'radial-gradient(ellipse at 70% 40%, #d4d4d4 0%, #a3a3a3 30%, #737373 60%, #525252 100%)' } : card.bg === 'redotpay-gradient' ? { background: 'linear-gradient(135deg, #E31B54 0%, #E31B54 40%, #FF3366 60%, #E31B54 100%)' } : {}}>
             {/* Shimmer effect */}
             <div className="absolute inset-0 overflow-hidden rounded-2xl pointer-events-none">
@@ -634,7 +657,7 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
           </div>
         </div>
         {/* BACK */}
-        <div style={{ position: 'absolute', width: '100%', height: '100%', backfaceVisibility: 'hidden', transform: 'rotateY(180deg)' }}>
+        <div style={{ position: 'absolute', width: '100%', height: '100%', backfaceVisibility: 'hidden', WebkitBackfaceVisibility: 'hidden', transform: 'rotateY(180deg)' }}>
           <div className="h-full bg-gray-900 rounded-2xl p-3 md:p-4 text-white border border-gray-700 flex flex-col overflow-y-auto">
             <div className="flex items-center justify-between mb-2">
               <div className="flex items-center gap-2">
@@ -1848,7 +1871,19 @@ function VideoDemoPage({ darkMode, onBack }) {
 
 function SubscribeModal({ open, onClose, darkMode }) {
   const [submitted, setSubmitted] = useState(false);
+  const [loading, setLoading] = useState(false);
+  const [formData, setFormData] = useState({ name: '', email: '', country: '', monthlySpend: '' });
+
   if (!open) return null;
+
+  const handleSubmit = async () => {
+    if (!formData.email) return;
+    setLoading(true);
+    await submitToAPI('subscribe', { ...formData, source: 'modal' });
+    setLoading(false);
+    setSubmitted(true);
+  };
+
   return (
     <div className="fixed inset-0 bg-black/70 flex items-center justify-center p-4 z-50">
       <div className={`rounded-2xl w-full max-w-md overflow-hidden ${darkMode ? 'bg-gray-900' : 'bg-white'}`}>
@@ -1861,7 +1896,7 @@ function SubscribeModal({ open, onClose, darkMode }) {
             <div className="text-center py-4">
               <div className="text-5xl mb-4">🎉</div>
               <p className={`mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-600'}`}>Check your inbox for a welcome gift!</p>
-              <button onClick={() => {setSubmitted(false);onClose()}} className={`w-full py-3 rounded-lg ${darkMode ? 'bg-gray-800 text-white' : 'bg-gray-100 text-gray-900'}`}>Close</button>
+              <button onClick={() => {setSubmitted(false);setFormData({name:'',email:'',country:'',monthlySpend:''});onClose()}} className={`w-full py-3 rounded-lg ${darkMode ? 'bg-gray-800 text-white' : 'bg-gray-100 text-gray-900'}`}>Close</button>
             </div>
           ) : (
             <div className="space-y-4">
@@ -1876,11 +1911,11 @@ function SubscribeModal({ open, onClose, darkMode }) {
                   <li className="flex items-center gap-2"><span className="text-lime-400">✓</span> Cashback promotions</li>
                 </ul>
               </div>
-              <input type="text" placeholder="Name" className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`} />
-              <input type="email" placeholder="Email" className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`} />
-              <select className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`}><option>Country</option><option>US</option><option>UK</option><option>EU</option></select>
-              <select className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`}><option>Monthly spend</option><option>Less than $500</option><option>$500-$5,000</option><option>$5,000+</option></select>
-              <button onClick={() => setSubmitted(true)} className="w-full py-3 bg-gradient-to-r from-lime-400 to-emerald-500 text-gray-900 font-bold rounded-lg hover:shadow-lg hover:shadow-lime-500/30 transition-all">Subscribe for Free</button>
+              <input type="text" placeholder="Name" value={formData.name} onChange={e => setFormData(p => ({...p, name: e.target.value}))} className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`} />
+              <input type="email" placeholder="Email" value={formData.email} onChange={e => setFormData(p => ({...p, email: e.target.value}))} className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`} />
+              <select value={formData.country} onChange={e => setFormData(p => ({...p, country: e.target.value}))} className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`}><option value="">Country</option><option value="US">US</option><option value="UK">UK</option><option value="EU">EU</option><option value="Other">Other</option></select>
+              <select value={formData.monthlySpend} onChange={e => setFormData(p => ({...p, monthlySpend: e.target.value}))} className={`w-full px-4 py-3 rounded-lg ${darkMode ? 'bg-gray-800 border border-gray-700 text-white' : 'bg-gray-50 border border-gray-200 text-gray-900'}`}><option value="">Monthly spend</option><option value="<500">Less than $500</option><option value="500-5000">$500-$5,000</option><option value="5000+">$5,000+</option></select>
+              <button onClick={handleSubmit} disabled={loading || !formData.email} className="w-full py-3 bg-gradient-to-r from-lime-400 to-emerald-500 text-gray-900 font-bold rounded-lg hover:shadow-lg hover:shadow-lime-500/30 transition-all disabled:opacity-50">{loading ? 'Subscribing...' : 'Subscribe for Free'}</button>
               <p className={`text-xs text-center ${darkMode ? 'text-gray-500' : 'text-gray-400'}`}>No spam. Unsubscribe anytime.</p>
               <button onClick={onClose} className="w-full py-2 text-gray-500 text-sm hover:text-gray-400 transition-colors">Maybe later</button>
             </div>
