--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@ function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode,
                 : "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/bf8b9a1c-ce8b-49da-48d1-027b873f3300/public"
               }
               alt="Spendbase"
-              className={darkMode ? "h-14" : "h-32"}
+              className={darkMode ? "h-10 md:h-14" : "h-16 md:h-24"}
               style={{ objectFit: 'contain' }}
             />
           </button>
@@ -1473,9 +1473,11 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
     filtered = filtered.filter(c => !c.comingSoon);
   }
 
-  // Search filter
-  if (searchTerm) {
-    const term = searchTerm.toLowerCase();
+  // Search filter (uses desktop searchTerm or mobile mobileSearch)
+  const [mobileSearchState, setMobileSearchState] = useState('');
+  const effectiveSearch = searchTerm || mobileSearchState;
+  if (effectiveSearch) {
+    const term = effectiveSearch.toLowerCase();
     filtered = filtered.filter(c =>
       c.name.toLowerCase().includes(term) ||
       c.chain.toLowerCase().includes(term) ||
@@ -1517,7 +1519,7 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
   }
 
   const clearFilters = () => { setCategoryFilter('all'); setCustodyFilter('all'); setNetworkFilter('all'); setRegionFilter('all'); setArchetypeFilter('all'); setPlatformFilter('all'); setRatingSort('none'); };
-  const hasActiveFilters = categoryFilter !== 'all' || custodyFilter !== 'all' || networkFilter !== 'all' || regionFilter !== 'all' || archetypeFilter !== 'all' || platformFilter !== 'all' || ratingSort !== 'none' || (searchTerm && searchTerm.length > 0);
+  const hasActiveFilters = categoryFilter !== 'all' || custodyFilter !== 'all' || networkFilter !== 'all' || regionFilter !== 'all' || archetypeFilter !== 'all' || platformFilter !== 'all' || ratingSort !== 'none' || effectiveSearch;
 
   // Category descriptions for the filter section
   const categoryDescriptions = {
@@ -1529,51 +1531,66 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
   };
 
   return (
-    <div className="max-w-6xl mx-auto p-6">
+    <div className="max-w-6xl mx-auto px-4 sm:p-6">
       {/* SEO-optimized hero section */}
-      <header className="mb-8">
-        <h1 className={`text-4xl font-bold mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2025</h1>
-        <p className={`text-lg mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
-          Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards. Find the perfect card with cashback rewards, self-custody options, and zero FX fees.
+      <header className="mb-6 sm:mb-8">
+        <h1 className={`text-2xl sm:text-4xl font-bold mb-2 sm:mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2025</h1>
+        <p className={`text-sm sm:text-lg mb-3 sm:mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
+          Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards.
         </p>
-        <div className={`text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
+        <div className={`text-xs sm:text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'} hidden sm:block`}>
           <span className="inline-flex items-center gap-2 mr-4">✓ Self-custody & non-custodial cards</span>
           <span className="inline-flex items-center gap-2 mr-4">✓ Up to 15% crypto cashback</span>
           <span className="inline-flex items-center gap-2">✓ Stablecoin spending (USDC, USDT)</span>
         </div>
       </header>
 
+      {/* Mobile Search - visible on small screens */}
+      <div className="mb-4 md:hidden">
+        <div className="relative">
+          <svg className={`absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 ${darkMode ? 'text-gray-500' : 'text-gray-400'}`} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+          <input
+            type="text"
+            placeholder="Search cards..."
+            value={mobileSearchState}
+            onChange={(e) => setMobileSearchState(e.target.value)}
+            className={`w-full pl-10 pr-4 py-3 rounded-lg text-sm ${darkMode ? 'bg-gray-900 border border-gray-800 text-white placeholder-gray-500' : 'bg-gray-50 border border-gray-200 text-gray-900 placeholder-gray-400'}`}
+          />
+        </div>
+      </div>
+
       {/* Wizard Promo Banner */}
-      <div className={`mb-6 p-4 rounded-xl border bg-gradient-to-r ${darkMode ? 'from-lime-400/10 to-emerald-500/10 border-lime-400/30' : 'from-lime-50 to-emerald-50 border-lime-200'}`}>
-        <div className="flex items-center justify-between flex-wrap gap-4">
-          <div className="flex items-center gap-3">
-            <div className="text-3xl">✨</div>
-            <div>
-              <h3 className={`font-bold ${darkMode ? 'text-white' : 'text-gray-900'}`}>Not sure which card is right for you?</h3>
-              <p className={`text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>Take our 60-second quiz to find your perfect match</p>
+      <div className={`mb-4 sm:mb-6 p-3 sm:p-4 rounded-xl border bg-gradient-to-r ${darkMode ? 'from-lime-400/10 to-emerald-500/10 border-lime-400/30' : 'from-lime-50 to-emerald-50 border-lime-200'}`}>
+        <div className="flex items-center justify-between gap-3">
+          <div className="flex items-center gap-2 sm:gap-3 min-w-0">
+            <div className="text-xl sm:text-3xl flex-shrink-0">✨</div>
+            <div className="min-w-0">
+              <h3 className={`font-bold text-sm sm:text-base truncate ${darkMode ? 'text-white' : 'text-gray-900'}`}>Not sure which card?</h3>
+              <p className={`text-xs sm:text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'} hidden sm:block`}>Take our 60-second quiz to find your perfect match</p>
             </div>
           </div>
           <button
             onClick={() => window.dispatchEvent(new CustomEvent('navigateTo', { detail: 'wizard' }))}
-            className="px-5 py-2.5 bg-gradient-to-r from-lime-400 to-emerald-500 text-gray-900 rounded-lg font-semibold text-sm hover:from-lime-300 hover:to-emerald-400 transition-all hover:scale-105 shadow-lg shadow-lime-400/20"
+            className="px-3 sm:px-5 py-2 sm:py-2.5 bg-gradient-to-r from-lime-400 to-emerald-500 text-gray-900 rounded-lg font-semibold text-xs sm:text-sm whitespace-nowrap flex-shrink-0"
           >
-            Find My Card
+            Quiz
           </button>
         </div>
       </div>
 
       {/* CATEGORY TABS - Primary filter */}
-      <div className="flex flex-wrap gap-2 mb-6">
+      <div className="flex gap-2 mb-6 overflow-x-auto pb-2 -mx-4 px-4 sm:mx-0 sm:px-0 sm:flex-wrap sm:overflow-visible">
         {[
-          {id:'all', label:'All Cards', color:'bg-white text-gray-900'},
-          {id:'cryptoNative', label:'Crypto-Native', color:'bg-lime-400 text-gray-900'},
-          {id:'onchain', label:'Onchain', color:'bg-purple-500 text-white'},
-          {id:'neobank', label:'Neobanks + Crypto', color:'bg-gray-600 text-white'},
-          {id:'staking', label:'Token Rewards', color:'bg-gradient-to-r from-amber-400 to-orange-500 text-gray-900'},
-          {id:'comingSoon', label:'🚀 Coming Soon', color:'bg-gradient-to-r from-cyan-400 to-blue-500 text-gray-900'}
+          {id:'all', label:'All', labelFull:'All Cards', color:'bg-white text-gray-900'},
+          {id:'cryptoNative', label:'Crypto', labelFull:'Crypto-Native', color:'bg-lime-400 text-gray-900'},
+          {id:'onchain', label:'Onchain', labelFull:'Onchain', color:'bg-purple-500 text-white'},
+          {id:'neobank', label:'Banks', labelFull:'Neobanks + Crypto', color:'bg-gray-600 text-white'},
+          {id:'staking', label:'Tokens', labelFull:'Token Rewards', color:'bg-gradient-to-r from-amber-400 to-orange-500 text-gray-900'},
+          {id:'comingSoon', label:'Soon', labelFull:'Coming Soon', color:'bg-gradient-to-r from-cyan-400 to-blue-500 text-gray-900'}
         ].map(f => (
-          <button key={f.id} onClick={() => setCategoryFilter(f.id)} className={`px-4 py-2 rounded-lg text-sm font-medium transition ${categoryFilter === f.id ? f.color : (darkMode ? 'bg-gray-800 text-gray-400 hover:text-white' : 'bg-gray-200 text-gray-600 hover:text-gray-900')}`}>
-            {f.label}
+          <button key={f.id} onClick={() => setCategoryFilter(f.id)} className={`px-3 sm:px-4 py-2 rounded-lg text-xs sm:text-sm font-medium transition whitespace-nowrap flex-shrink-0 ${categoryFilter === f.id ? f.color : (darkMode ? 'bg-gray-800 text-gray-400 hover:text-white' : 'bg-gray-200 text-gray-600 hover:text-gray-900')}`}>
+            <span className="sm:hidden">{f.label}</span>
+            <span className="hidden sm:inline">{f.labelFull}</span>
           </button>
         ))}
       </div>
@@ -1591,9 +1608,16 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
         </div>
       )}
 
-      {/* SECONDARY FILTERS */}
-      <div className={`rounded-xl p-4 mb-8 ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-gray-50 border border-gray-200'}`}>
-        <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-4">
+      {/* SECONDARY FILTERS - Hidden on mobile, visible on desktop */}
+      <div className={`rounded-xl p-3 sm:p-4 mb-6 sm:mb-8 ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-gray-50 border border-gray-200'}`}>
+        {/* Mobile: Simple filter row */}
+        <div className="grid grid-cols-3 gap-2 sm:hidden mb-3">
+          <div className="flex flex-wrap gap-1">{[{id:'all',label:'All'},{id:'self',label:'Self'},{id:'custodial',label:'Cust.'}].map(f => <button key={f.id} onClick={() => setCustodyFilter(f.id)} className={`px-2 py-1 rounded text-[10px] font-medium ${custodyFilter === f.id ? 'bg-cyan-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div>
+          <div className="flex flex-wrap gap-1">{[{id:'all',label:'All'},{id:'visa',label:'Visa'},{id:'mastercard',label:'MC'}].map(f => <button key={f.id} onClick={() => setNetworkFilter(f.id)} className={`px-2 py-1 rounded text-[10px] font-medium ${networkFilter === f.id ? 'bg-purple-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div>
+          <div className="flex flex-wrap gap-1">{[{id:'all',label:'All'},{id:'americas',label:'US'},{id:'europe',label:'EU'}].map(f => <button key={f.id} onClick={() => setRegionFilter(f.id)} className={`px-2 py-1 rounded text-[10px] font-medium ${regionFilter === f.id ? 'bg-orange-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div>
+        </div>
+        {/* Desktop: Full filter grid */}
+        <div className="hidden sm:grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-4">
           <div><label className={`text-xs mb-2 block ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>Custody</label><div className="flex flex-wrap gap-1">{[{id:'all',label:'All'},{id:'self',label:'Self-Custody'},{id:'custodial',label:'Custodial'}].map(f => <button key={f.id} onClick={() => setCustodyFilter(f.id)} className={`px-2 py-1 rounded text-xs font-medium ${custodyFilter === f.id ? 'bg-cyan-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div></div>
           <div><label className={`text-xs mb-2 block ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>Network</label><div className="flex flex-wrap gap-1">{[{id:'all',label:'All'},{id:'visa',label:'Visa'},{id:'mastercard',label:'MC'}].map(f => <button key={f.id} onClick={() => setNetworkFilter(f.id)} className={`px-2 py-1 rounded text-xs font-medium ${networkFilter === f.id ? 'bg-purple-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div></div>
           <div><label className={`text-xs mb-2 block ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>Region</label><div className="flex flex-wrap gap-1">{[{id:'all',label:'All'},{id:'americas',label:'US'},{id:'europe',label:'EU'},{id:'apac',label:'APAC'},{id:'global',label:'Global'}].map(f => <button key={f.id} onClick={() => setRegionFilter(f.id)} className={`px-2 py-1 rounded text-xs font-medium ${regionFilter === f.id ? 'bg-orange-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div></div>
@@ -1602,19 +1626,19 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
           <div><label className={`text-xs mb-2 block ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>Sort by Rating</label><div className="flex flex-wrap gap-1">{[{id:'none',label:'Default'},{id:'highest',label:'★ Highest'},{id:'lowest',label:'★ Lowest'}].map(f => <button key={f.id} onClick={() => setRatingSort(f.id)} className={`px-2 py-1 rounded text-xs font-medium ${ratingSort === f.id ? 'bg-yellow-400 text-gray-900' : (darkMode ? 'bg-gray-800 text-gray-300' : 'bg-gray-200 text-gray-600')}`}>{f.label}</button>)}</div></div>
         </div>
         <div className={`mt-3 pt-3 border-t flex justify-between items-center ${darkMode ? 'border-gray-800' : 'border-gray-200'}`}>
-          <span className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>{filtered.length} cards found</span>
-          {hasActiveFilters && <button onClick={clearFilters} className="text-lime-500 text-sm">Clear filters</button>}
+          <span className={`text-xs sm:text-sm ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>{filtered.length} cards found</span>
+          {hasActiveFilters && <button onClick={clearFilters} className="text-lime-500 text-xs sm:text-sm">Clear filters</button>}
         </div>
       </div>
 
       {/* CARDS GRID */}
-      <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">{filtered.map(card => <Card key={card.id} card={card} ratings={ratings} onRate={onRate} darkMode={darkMode} userRatedCards={userRatedCards} isInCompare={compareList?.some(c => c.id === card.id)} onCompareToggle={onCompareToggle} />)}</div>
+      <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">{filtered.map(card => <Card key={card.id} card={card} ratings={ratings} onRate={onRate} darkMode={darkMode} userRatedCards={userRatedCards} isInCompare={compareList?.some(c => c.id === card.id)} onCompareToggle={onCompareToggle} />)}</div>
 
       {/* STATS */}
-      <div className="mt-12 grid grid-cols-3 gap-4">
-        <div className={`rounded-xl p-6 text-center ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200 shadow-sm'}`}><p className="text-3xl font-bold text-lime-500">$18B+</p><p className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>Annual Volume</p></div>
-        <div className={`rounded-xl p-6 text-center ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200 shadow-sm'}`}><p className="text-3xl font-bold text-purple-500">$308B</p><p className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>Stablecoin Supply</p></div>
-        <div className={`rounded-xl p-6 text-center ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200 shadow-sm'}`}><p className="text-3xl font-bold text-cyan-500">460%</p><p className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>YoY Growth</p></div>
+      <div className="mt-12 grid grid-cols-1 sm:grid-cols-3 gap-4">
+        <div className={`rounded-xl p-4 sm:p-6 text-center ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200 shadow-sm'}`}><p className="text-2xl sm:text-3xl font-bold text-lime-500">$18B+</p><p className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>Annual Volume</p></div>
+        <div className={`rounded-xl p-4 sm:p-6 text-center ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200 shadow-sm'}`}><p className="text-2xl sm:text-3xl font-bold text-purple-500">$308B</p><p className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>Stablecoin Supply</p></div>
+        <div className={`rounded-xl p-4 sm:p-6 text-center ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200 shadow-sm'}`}><p className="text-2xl sm:text-3xl font-bold text-cyan-500">460%</p><p className={darkMode ? 'text-gray-500 text-sm' : 'text-gray-500 text-sm'}>YoY Growth</p></div>
       </div>
     </div>
   );
